--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-family: 'Playfair Display', serif;
+  font-weight: 600;
   color: #fff;
   opacity: 0;
   animation: heroFade 1.8s ease-out 0.5s forwards;
@@ -148,8 +148,8 @@ body {
 }
 
 .social-menu img {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   object-fit: contain;
   filter: brightness(0) invert(1);
   transition: filter 0.3s;
